@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2016 The Android Open Source Project
+ * Copyright (C) 2022 The Android Open Source Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,13 +14,12 @@
  * limitations under the License.
  */
 
-package com.android.settings.language;
+package com.android.settings.inputmethod;
 
 import static android.app.admin.DevicePolicyResources.Strings.Settings.PERSONAL_DICTIONARY_FOR_WORK;
 import static android.app.admin.DevicePolicyResources.Strings.Settings.SPELL_CHECKER_FOR_WORK;
 import static android.app.admin.DevicePolicyResources.Strings.Settings.WORK_PROFILE_KEYBOARDS_AND_TOOLS;
 
-import android.app.Activity;
 import android.app.settings.SettingsEnums;
 import android.content.Context;
 import android.os.Bundle;
@@ -31,9 +30,9 @@ import androidx.annotation.Nullable;
 
 import com.android.settings.R;
 import com.android.settings.dashboard.DashboardFragment;
-import com.android.settings.inputmethod.PhysicalKeyboardPreferenceController;
-import com.android.settings.inputmethod.SpellCheckerPreferenceController;
-import com.android.settings.inputmethod.VirtualKeyboardPreferenceController;
+import com.android.settings.language.DefaultVoiceInputPreferenceController;
+import com.android.settings.language.PointerSpeedController;
+import com.android.settings.language.TtsPreferenceController;
 import com.android.settings.search.BaseSearchIndexProvider;
 import com.android.settings.widget.PreferenceCategoryController;
 import com.android.settingslib.core.AbstractPreferenceController;
@@ -45,37 +44,23 @@ import java.util.Arrays;
 import java.util.List;
 
 @SearchIndexable
-public class LanguageAndInputSettings extends DashboardFragment {
+public class KeyboardSettings extends DashboardFragment {
 
-    private static final String TAG = "LangAndInputSettings";
+    private static final String TAG = "KeyboardSettings";
 
     private static final String KEY_KEYBOARDS_CATEGORY = "keyboards_category";
     private static final String KEY_SPEECH_CATEGORY = "speech_category";
-    private static final String KEY_ON_DEVICE_RECOGNITION = "odsr_settings";
     private static final String KEY_TEXT_TO_SPEECH = "tts_settings_summary";
     private static final String KEY_POINTER_CATEGORY = "pointer_category";
 
     @Override
     public int getMetricsCategory() {
-        return SettingsEnums.SETTINGS_LANGUAGE_CATEGORY;
+        return SettingsEnums.SETTINGS_KEYBOARDS_CATEGORY;
     }
 
     @Override
     protected String getLogTag() {
         return TAG;
-    }
-
-    @Override
-    public void onResume() {
-        super.onResume();
-        // Hack to update action bar title. It's necessary to refresh title because this page user
-        // can change locale from here and fragment won't relaunch. Once language changes, title
-        // must display in the new language.
-        final Activity activity = getActivity();
-        if (activity == null) {
-            return;
-        }
-        activity.setTitle(R.string.language_settings);
     }
 
     @Override
@@ -94,7 +79,7 @@ public class LanguageAndInputSettings extends DashboardFragment {
 
     @Override
     protected int getPreferenceScreenResId() {
-        return R.xml.language_and_input;
+        return R.xml.keyboard_settings;
     }
 
     @Override
@@ -105,7 +90,6 @@ public class LanguageAndInputSettings extends DashboardFragment {
     private static List<AbstractPreferenceController> buildPreferenceControllers(
             @NonNull Context context, @Nullable Lifecycle lifecycle) {
         final List<AbstractPreferenceController> controllers = new ArrayList<>();
-
         // Input
         final VirtualKeyboardPreferenceController virtualKeyboardPreferenceController =
                 new VirtualKeyboardPreferenceController(context);
@@ -123,21 +107,11 @@ public class LanguageAndInputSettings extends DashboardFragment {
                 new DefaultVoiceInputPreferenceController(context, lifecycle);
         final TtsPreferenceController ttsPreferenceController =
                 new TtsPreferenceController(context, KEY_TEXT_TO_SPEECH);
-        final OnDeviceRecognitionPreferenceController onDeviceRecognitionPreferenceController =
-                new OnDeviceRecognitionPreferenceController(context, KEY_ON_DEVICE_RECOGNITION);
-
         controllers.add(defaultVoiceInputPreferenceController);
         controllers.add(ttsPreferenceController);
-        List<AbstractPreferenceController> speechCategoryChildren = new ArrayList<>(
-                List.of(defaultVoiceInputPreferenceController, ttsPreferenceController));
-
-        if (onDeviceRecognitionPreferenceController.isAvailable()) {
-            controllers.add(onDeviceRecognitionPreferenceController);
-            speechCategoryChildren.add(onDeviceRecognitionPreferenceController);
-        }
-
-        controllers.add(new PreferenceCategoryController(context, KEY_SPEECH_CATEGORY)
-                .setChildren(speechCategoryChildren));
+        controllers.add(new PreferenceCategoryController(context,
+                KEY_SPEECH_CATEGORY).setChildren(
+                Arrays.asList(defaultVoiceInputPreferenceController, ttsPreferenceController)));
 
         // Pointer
         final PointerSpeedController pointerController = new PointerSpeedController(context);
@@ -152,16 +126,10 @@ public class LanguageAndInputSettings extends DashboardFragment {
     }
 
     public static final BaseSearchIndexProvider SEARCH_INDEX_DATA_PROVIDER =
-            new BaseSearchIndexProvider(R.xml.language_and_input) {
-                @Override
-                public List<AbstractPreferenceController> createPreferenceControllers(
-                        Context context) {
-                    return buildPreferenceControllers(context, null);
-                }
-
+            new BaseSearchIndexProvider(R.xml.keyboard_settings) {
                 @Override
                 protected boolean isPageSearchEnabled(Context context) {
-                    return !FeatureFlagUtils
+                    return FeatureFlagUtils
                             .isEnabled(context, FeatureFlagUtils.SETTINGS_NEW_KEYBOARD_UI);
                 }
             };
